Bug 487742 - Small Window Previews go past to second monitor when on horizontal mode, instead of activating scroll bar
Summary: Small Window Previews go past to second monitor when on horizontal mode, inst...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.0.4
Platform: Manjaro Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-29 13:44 UTC by hyper
Modified: 2024-06-08 02:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments
Preview of window previews extending to other monitor no scrollbar (721.77 KB, image/png)
2024-05-29 13:44 UTC, hyper
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hyper 2024-05-29 13:44:16 UTC
Created attachment 169936 [details]
Preview of window previews extending to other monitor no scrollbar

SUMMARY
Using Manjaro, and I've just updated Manjaro Kernel a week ago, and then the scroll bar disappearing happened when using the small window previews in the behavior for clicking grouped tasks. It turns out what's happening is that the window previews extends towards the second monitor, that's why the scrollbar isn't activating.

It isn't an issue when I move the panel in vertical mode, but happens when it's on horizontal mode with multi-monitor display.

STEPS TO REPRODUCE
1. Set panel in horizontal mode, either bottom or top
2. Put Icons-only Task Manager, with a clicking group task behavior set to small window previews
3. Make many windows of one app, such as a browser, until it fills one monitor
4. Scrollbar doesn't show up(previous versions would show the scroll bar as soon as it's filled), instead the small window preview extends to second monitor

OBSERVED RESULT
Scrollbar doesn't show up for Small Window Previews on the main monitor that has all the windows in it when the panel is in horizontal mode. Instead the Small Window Previews extend towards another monitor.

EXPECTED RESULT
Scrollbar should show up as soon as the horizontal panel Small Window Previews is filled in one monitor.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.9.0-1-MANJARO / KDE Plasma Version: 6.0.4
(available in About System)
KDE Plasma Version: 6.0.4 
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-05-30 13:43:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1140
Comment 2 Marco Martin 2024-06-04 08:17:27 UTC
Git commit c20b2faaf91fe5b6d91fcc1967efba323a4e7736 by Marco Martin.
Committed on 04/06/2024 at 08:17.
Pushed by mart into branch 'master'.

Always limit tooltip size to screen size

When there is more than one screen, kwin won't attemp to limit the tooltip size,
and is possible it goes beyond the screen boundaries, add an explicit limit

M  +5    -0    src/declarativeimports/core/tooltipdialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/c20b2faaf91fe5b6d91fcc1967efba323a4e7736
Comment 3 Marco Martin 2024-06-04 09:20:22 UTC
Git commit e81006d97744454f1c3055cd344eda5abab8bf8a by Marco Martin.
Committed on 04/06/2024 at 09:11.
Pushed by mart into branch 'Plasma/6.1'.

Always limit tooltip size to screen size

When there is more than one screen, kwin won't attemp to limit the tooltip size,
and is possible it goes beyond the screen boundaries, add an explicit limit


(cherry picked from commit c20b2faaf91fe5b6d91fcc1967efba323a4e7736)

32f47a6a Always limit tooltip size to screen size
b0af5eab use boundedTo()

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +5    -0    src/declarativeimports/core/tooltipdialog.cpp

https://invent.kde.org/plasma/libplasma/-/commit/e81006d97744454f1c3055cd344eda5abab8bf8a