Always limit tooltip size to screen size

When there is more than one screen, kwin won't attemp to limit the tooltip size,
and is possible it goes beyond the screen boundaries, add an explicit limit

BUG:487742